import { Text, View } from "react-native";

export default function HomeScreen() {
  return (
    <View
      style={{
        flex: 1,
      }}
    >
      <Text>Home Screen</Text>
    </View>
  );
}
